Bug 1880845 - Prevent any GPU process setup during any shutdown phase.

This patch makes it so that the GPU process setup requires us to not be
in any shutdown state, whereas before we would do this only once
reaching XPCOMShutdown (much later in the steps). Furthermore, we also
no longer block on waiting to finish setting up a GPU process during
shutdown. Now instead we actually teardown the process entirely to
ensure it is cleaned up.

Note that if rendering is already in the parent process, or if the GPU
process is ready, it will continue to work as before.

Differential Revision: https://phabricator.services.mozilla.com/D211541